linkerd-in-production/09-policy/manifests/booksapp/allow_namespace.yaml
---
apiVersion: policy.linkerd.io/v1alpha1
kind: AuthorizationPolicy
metadata:
  name: authors-booksapp-only
  namespace: booksapp
  labels:
    app.kubernetes.io/part-of: booksapp
    project: booksapp
spec:
  targetRef:
    group: policy.linkerd.io
    kind: server
    name: authors
  requiredAuthenticationRefs:
    - name: booksapp-accounts
      kind: MeshTLSAuthentication
      group: policy.linkerd.io
---
apiVersion: policy.linkerd.io/v1alpha1
kind: AuthorizationPolicy
metadata:
  name: webapp-booksapp-only
  namespace: booksapp
  labels:
    app.kubernetes.io/part-of: booksapp
    project: booksapp
spec:
  targetRef:
    group: policy.linkerd.io
    kind: server
    name: webapp
  requiredAuthenticationRefs:
    - name: booksapp-accounts
      kind: MeshTLSAuthentication
      group: policy.linkerd.io
---
apiVersion: policy.linkerd.io/v1alpha1
kind: AuthorizationPolicy
metadata:
  name: books-booksapp-only
  namespace: booksapp
  labels:
    app.kubernetes.io/part-of: booksapp
    project: booksapp
spec:
  targetRef:
    group: policy.linkerd.io
    kind: server
    name: books
  requiredAuthenticationRefs:
    - name: booksapp-accounts
      kind: MeshTLSAuthentication
      group: policy.linkerd.io
